--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,8 @@
     <!-- App Name -->
     <string name="app_name" translatable="false">EhViewer</string>
 
-    <!-- Warning Scene -->
-    <string name="app_waring">The content of this application is from the Internet. Some of it may do physical or mental harm to you. You have learnt the risks above and would like to undertake them. By continuing to use it, you agree to the above terms.</string>
-    <string name="accept">Accept</string>
-    <string name="reject">Reject</string>
-
     <!-- Login Scene -->
+    <string name="app_waring">The content of this application is from the Internet. Some of it may do physical or mental harm to you. You have learnt the risks above and would like to undertake them.\nBy continuing to use it, you agree to the above terms.</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
