--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -15,12 +15,8 @@
   -->
 
 <resources>
-    <!-- Warning Scene -->
-    <string name="app_waring">このアプリの内容はインターネットから取得したものです。その内容の一部は使用者のお体や心理に傷つける恐れがあります。それでも続行しますか？</string>
-    <string name="accept">同意</string>
-    <string name="reject">拒否</string>
-
     <!-- Login Scene -->
+    <string name="app_waring">このアプリの内容はインターネットから取得したものです。その内容の一部は使用者のお体や心理に傷つける恐れがあります。</string>
     <string name="username">ユーザー名</string>
     <string name="password">パスワード</string>
     <string name="sign_in">ログイン</string>
