Limit page range minimum

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -156,6 +156,7 @@
     <string name="star_5">5 星</string>
     <string name="search_sp">页数：</string>
     <string name="search_sp_to">到</string>
+    <string name="search_sp_err0">页数最小值至多为 1000</string>
     <string name="search_sp_err1">页数最大值至少为 10</string>
     <string name="search_sp_err2">页数范围差至少为 20</string>
     <string name="search_sf">禁用排除项：</string>
