--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,6 +165,7 @@
     <string name="search_sp_to">to</string>
     <!-- A placeholder for other languages -->
     <string name="search_sp_suffix" />
+    <string name="search_sp_err0">The page range minimum cannot be above 1000</string>
     <string name="search_sp_err1">The page range maximum cannot be below 10</string>
     <string name="search_sp_err2">The page range must be at least 20</string>
     <string name="search_sf">Disable default filters for:</string>
