--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -244,6 +244,8 @@
     <string name="archive_original">原始档案</string>
     <string name="archive_resample">重采样档案</string>
     <string name="archive_free">免费</string>
+    <string name="current_funds">资金：%1$s GP，%2$d Credits</string>
+    <string name="insufficient_funds">余额不足</string>
     <string name="download_archive_started">开始下载压缩包</string>
     <string name="download_archive_failure">无法下载压缩包</string>
     <string name="download_archive_failure_no_hath">下载压缩包需要 H@H 客户端</string>
