--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -244,6 +244,8 @@
     <string name="archive_original">原始檔案</string>
     <string name="archive_resample">重採樣檔案</string>
     <string name="archive_free">免費</string>
+    <string name="current_funds">資金：%1$s GP，%2$d Credits</string>
+    <string name="insufficient_funds">餘額不足</string>
     <string name="download_archive_started">開始下載壓縮包</string>
     <string name="download_archive_failure">無法下載壓縮包</string>
     <string name="download_archive_failure_no_hath">下載壓縮包需要 H@H 客户端</string>
