--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,8 @@
     <string name="archive_original">Original archive</string>
     <string name="archive_resample">Resample archive</string>
     <string name="archive_free">Free</string>
+    <string name="current_funds">Funds: %1$s GP, %2$d Credits</string>
+    <string name="insufficient_funds">Insufficient Funds</string>
     <string name="download_archive_started">Archive download started</string>
     <string name="download_archive_failure">Failed to download archive</string>
     <string name="download_archive_failure_no_hath">Need H@H client for archive download</string>
