--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -51,7 +51,7 @@
     <string name="press_twice_exit">もう一度押して終了します</string>
     <string name="clipboard_gallery_url_snack_message">クリップボードにはギャラリーURLが検出されました。</string>
     <string name="clipboard_gallery_url_snack_action">移動</string>
-    <string name="please_wait">お待ちください</string>
+    <string name="please_wait">お待ちください...</string>
 
     <!-- Gallery Activity -->
     <string name="page_menu_title">ページ%d</string>
