--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -55,7 +55,7 @@
     <string name="press_twice_exit">再按一次退出</string>
     <string name="clipboard_gallery_url_snack_message">剪切板里有画廊链接</string>
     <string name="clipboard_gallery_url_snack_action">查看</string>
-    <string name="please_wait">请稍候</string>
+    <string name="please_wait">请稍候...</string>
     <string name="app_link_not_verified_title">应用链接未验证</string>
     <string name="app_link_not_verified_message">对于 Android 12 及更高版本，您需要手动添加链接到已验证链接才能在 EhViewer 中打开 E-Hentai 链接。</string>
     <string name="open_settings">打开设置</string>
@@ -383,6 +383,12 @@
     <string name="settings_eh_identity_cookies_tourist">游客模式</string>
     <string name="settings_eh_identity_cookies_copy">复制</string>
     <string name="settings_eh_gallery_site">画廊站点</string>
+    <string name="settings_eh_image_limits">图片配额</string>
+    <string name="settings_eh_image_limits_summary">加载中...</string>
+    <string name="settings_eh_image_limits_summary_2">当前限制：%1$d / %2$d</string>
+    <string name="settings_eh_current_limits">当前限制：%1$s\n重置花费：%2$s</string>
+    <string name="settings_eh_reset">重置</string>
+    <string name="settings_eh_reset_limits_succeed">成功重置图片配额</string>
     <string name="settings_eh_u_config">EHentai 设置</string>
     <string name="settings_eh_u_config_summary">EHentai 网站上的设置</string>
     <string name="settings_eh_my_tags">我的标签</string>
