--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="press_twice_exit">Press twice to exit</string>
     <string name="clipboard_gallery_url_snack_message">There is a gallery URL in the clipboard</string>
     <string name="clipboard_gallery_url_snack_action">View</string>
-    <string name="please_wait">Please wait</string>
+    <string name="please_wait">Please wait...</string>
     <string name="app_link_not_verified_title">App links not verified</string>
     <string name="app_link_not_verified_message">For Android 12 and newer, you need to manually add link to verified links in order to open E-Hentai links in EhViewer.</string>
     <string name="open_settings">Open settings</string>
@@ -409,6 +409,12 @@
     <string name="settings_eh_identity_cookies_tourist">Not signed in.</string>
     <string name="settings_eh_identity_cookies_copy">Copy</string>
     <string name="settings_eh_gallery_site">Gallery site</string>
+    <string name="settings_eh_image_limits">Image Limits</string>
+    <string name="settings_eh_image_limits_summary">Loading...</string>
+    <string name="settings_eh_image_limits_summary_2">Current: %1$d / %2$d</string>
+    <string name="settings_eh_current_limits">Current: %1$s\nReset Cost: %2$s</string>
+    <string name="settings_eh_reset">Reset</string>
+    <string name="settings_eh_reset_limits_succeed">Image limit was successfully reset</string>
     <string name="settings_eh_u_config">EHentai settings</string>
     <string name="settings_eh_u_config_summary">Settings on EHentai website</string>
     <string name="settings_eh_my_tags">My tags</string>
