--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -596,6 +596,8 @@
     <string name="error_something_wrong_happened">被玩坏了</string>
     <string name="kokomade_tip">设置-&gt;Eh-&gt;画廊站点-&gt;e-hentai</string>
     <string name="no_browser_installed">请安装一个浏览器。</string>
+    <string name="cloudflare_bypass_failed">未能绕过 Cloudflare 验证</string>
+    <string name="open_in_webview">在 WebView 中打开链接以通过验证？</string>
 
     <!-- Readable Time -->
     <string name="from_the_future">来自未来</string>
