--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -502,6 +502,11 @@
     <string name="settings_advanced_thumb_cache_size">縮圖快取大小</string>
     <string name="settings_advanced_read_cache_size">閱讀快取大小</string>
     <string name="settings_advanced_app_language_title">App 介面語言</string>
+    <string name="settings_advanced_proxy">代理</string>
+    <string name="settings_advanced_built_in_hosts_title">內建 hosts.txt</string>
+    <string name="settings_advanced_built_in_hosts_summary">應用提供的主機到 IP 的對映\n可被自定義 hosts.txt 覆蓋</string>
+    <string name="settings_advanced_custom_hosts_title">自定義 hosts.txt</string>
+    <string name="settings_advanced_custom_hosts_summary">將主機名稱對映到相應的 IP 位址\n可覆蓋內建 hosts.txt</string>
     <string name="settings_advanced_backup_favorite">備份收藏列表</string>
     <string name="settings_advanced_backup_favorite_summary">備份雲端收藏列表到本機</string>
     <string name="settings_advanced_backup_favorite_start">正在備份收藏列表 %s</string>
@@ -552,6 +557,21 @@
     <string name="set">設定</string>
     <!-- Languages -->
     <string name="app_language_system">系統語言（預設）</string>
+    <!-- Proxy -->
+    <string name="proxy_direct">直接連線</string>
+    <string name="proxy_system">系統代理</string>
+    <string name="proxy_host_or_ip">主機或 IP</string>
+    <string name="proxy_port">通訊埠</string>
+    <string name="proxy_invalid_port">無效的通訊埠</string>
+    <!-- Hosts Activity -->
+    <string name="hosts">自訂 hosts.txt</string>
+    <string name="add_host">加入 host</string>
+    <string name="add_host_add">加入</string>
+    <string name="edit_host">編輯 host</string>
+    <string name="edit_host_confirm">確認</string>
+    <string name="edit_host_delete">刪除</string>
+    <string name="invalid_host">無效的 host</string>
+    <string name="invalid_ip">無效的 IP</string>
 
     <!-- Errors -->
     <string name="error_bad_status_code">錯誤狀態碼：%d</string>
@@ -566,6 +586,7 @@
     <string name="error_empty">空</string>
     <string name="error_reading_failed">讀取失敗</string>
     <string name="error_out_of_range">超出範圍</string>
+    <string name="error_write_failed">寫入失敗</string>
     <string name="error_parse_error">解析失敗</string>
     <string name="error_invalid_url">不正確的連結</string>
     <string name="error_get_ptoken_error">取得 pToken 時發生錯誤</string>
