--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -528,6 +528,13 @@
     <string name="settings_advanced_thumb_cache_size">Thumb cache size</string>
     <string name="settings_advanced_read_cache_size">Read cache size</string>
     <string name="settings_advanced_app_language_title">App language</string>
+    <string name="settings_advanced_proxy">Proxy</string>
+    <string name="settings_advanced_proxy_summary_1" translatable="false">%1$s %2$s:%3$d</string>
+    <string name="settings_advanced_proxy_summary_2" translatable="false">%1$s</string>
+    <string name="settings_advanced_built_in_hosts_title">Built-in hosts.txt</string>
+    <string name="settings_advanced_built_in_hosts_summary">Apply the built-in host-to-IP mapping provided by the app.\nIt can be overridden by custom hosts.txt</string>
+    <string name="settings_advanced_custom_hosts_title">Custom hosts.txt</string>
+    <string name="settings_advanced_custom_hosts_summary">Map hostnames to IP addresses.\nIt can override built-in hosts.txt</string>
     <string name="settings_advanced_backup_favorite">Backup favorite list</string>
     <string name="settings_advanced_backup_favorite_summary">Backup remote favorite list to local</string>
     <string name="settings_advanced_backup_favorite_start">Backing up favorite list %s</string>
@@ -586,6 +593,24 @@
     <string name="app_language_zh_cn" translatable="false">中文（大陆）</string>
     <string name="app_language_zh_hk" translatable="false">中文（香港）</string>
     <string name="app_language_zh_tw" translatable="false">國文（臺灣）</string>
+    <!-- Proxy -->
+    <string name="proxy_direct">Direct</string>
+    <string name="proxy_system">System Proxy</string>
+    <string name="proxy_host_or_ip">Host or IP</string>
+    <string name="proxy_port">Port</string>
+    <string name="proxy_invalid_port">Invalid port</string>
+    <!-- Hosts Activity -->
+    <string name="hosts">Custom hosts.txt</string>
+    <string name="hosts_tip" translatable="false">hosts.txt</string>
+    <string name="add_host">Add a host</string>
+    <string name="hosts_host" translatable="false">Host</string>
+    <string name="hosts_ip" translatable="false">IP1(+IP2+IP3…)</string>
+    <string name="add_host_add">Add</string>
+    <string name="edit_host">Edit the host</string>
+    <string name="edit_host_confirm">Confirm</string>
+    <string name="edit_host_delete">Delete</string>
+    <string name="invalid_host">Invalid host</string>
+    <string name="invalid_ip">Invalid IP</string>
 
     <!-- Errors -->
     <string name="error_status_code_400" translatable="false">Bad Request</string>
@@ -624,6 +649,7 @@
     <string name="error_empty">Empty</string>
     <string name="error_reading_failed">Reading Failed</string>
     <string name="error_out_of_range">Out of range</string>
+    <string name="error_write_failed">Write failed</string>
     <string name="error_parse_error">Parse error</string>
     <string name="error_509" translatable="false">509</string>
     <string name="error_invalid_url">Invalid URL</string>
