--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -401,7 +401,7 @@
     <string name="settings_eh_thumb_resolution_summary">%s，指定解析度可能會使縮圖取得失敗</string>
     <string name="settings_eh_thumb_resolution_auto">自動</string>
     <string name="settings_eh_force_eh_thumb">強制使用 e-hentai 縮圖/API 伺服器</string>
-    <string name="settings_eh_force_eh_thumb_summary">若 exhentai 載入失敗可嘗試此項目</string>
+    <string name="settings_eh_force_eh_thumb_summary">若 exhentai 載入失敗可嘗試此項目\n注意：此項將使用 e-hentai 設定來載入圖片</string>
     <string name="settings_eh_show_jpn_title">顯示日文標題</string>
     <string name="settings_eh_show_jpn_title_summary">需同時在 EHentai 網站設定中啟用 Japanese Title</string>
     <string name="settings_eh_show_gallery_pages">顯示圖庫頁數</string>
@@ -600,7 +600,7 @@
     <string name="kokomade_tip">設定-&gt;Eh-&gt;圖庫站台-&gt;e-hentai</string>
     <string name="no_browser_installed">請安裝一個瀏覽器。</string>
     <string name="cloudflare_bypass_failed">未能繞過 Cloudflare 驗證</string>
-    <string name="open_in_webview">在 WebView 中打開鏈接以通過驗證？</string>
+    <string name="open_in_webview">在 WebView 中開啟網址以完成驗證？</string>
 
     <!-- Readable Time -->
     <string name="from_the_future">來自未來</string>
