--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,9 +41,9 @@
 
     <!-- Select Site Scene -->
     <string name="select_scene">Which gallery site do you want to visit?</string>
-    <string name="site_e" translatable="false">e-hentai</string>
-    <string name="site_ex" translatable="false">exhentai</string>
-    <string name="select_scene_explain">e-hentai: available for anyone\nexhentai: available for who has signed in</string>
+    <string name="site_e" translatable="false">E-Hentai</string>
+    <string name="site_ex" translatable="false">ExHentai</string>
+    <string name="select_scene_explain">E-Hentai: available for anyone\nExHentai: available for who has signed in</string>
 
     <!-- Guide -->
     <string name="guide_gallery_left">Turn Page</string>
@@ -410,10 +410,10 @@
     <string name="settings_eh_current_limits">Current: %1$s\nReset Cost: %2$d GP</string>
     <string name="settings_eh_reset">Reset</string>
     <string name="settings_eh_reset_limits_succeed">Image limit was successfully reset</string>
-    <string name="settings_eh_u_config">EHentai settings</string>
-    <string name="settings_eh_u_config_summary">Settings on EHentai website</string>
+    <string name="settings_eh_u_config">E-Hentai settings</string>
+    <string name="settings_eh_u_config_summary">Settings on E-Hentai website</string>
     <string name="settings_eh_my_tags">My tags</string>
-    <string name="settings_eh_my_tags_summary">My tags on EHentai website</string>
+    <string name="settings_eh_my_tags_summary">My tags on E-Hentai website</string>
     <string name="settings_eh_black_dark_theme">Black dark theme</string>
     <string name="settings_eh_launch_page">Launch page</string>
     <string name="settings_eh_list_mode">List mode</string>
@@ -426,10 +426,10 @@
     <string name="settings_eh_thumb_resolution">Thumb resolution</string>
     <string name="settings_eh_thumb_resolution_summary">Currently %s. Certain resolutions might cause getting thumb failed</string>
     <string name="settings_eh_thumb_resolution_auto">Auto</string>
-    <string name="settings_eh_force_eh_thumb">Force e-hentai thumb/API server</string>
-    <string name="settings_eh_force_eh_thumb_summary">Try this if you have trouble loading from exhentai\nNote this will use e-hentai settings to load images</string>
+    <string name="settings_eh_force_eh_thumb">Force E-Hentai thumb/API server</string>
+    <string name="settings_eh_force_eh_thumb_summary">Try this if you have trouble loading from ExHentai\nNote this will use E-Hentai settings to load images</string>
     <string name="settings_eh_show_jpn_title">Show Japanese title</string>
-    <string name="settings_eh_show_jpn_title_summary">Require enabling Japanese Title in Settings on EHentai website</string>
+    <string name="settings_eh_show_jpn_title_summary">Require enabling Japanese Title in Settings on E-Hentai website</string>
     <string name="settings_eh_show_gallery_pages">Show gallery pages</string>
     <string name="settings_eh_show_gallery_pages_summary">Display the number of pages in the gallery list</string>
     <string name="settings_eh_show_gallery_comments">Show gallery comments</string>
@@ -446,7 +446,7 @@
     <string name="settings_eh_filter_summary">Block gallery or comment by title, uploader, tags and commenter</string>
     <string name="settings_eh_metered_network_warning">Metered network warning</string>
     <string name="settings_eh_request_news">Request news page on start</string>
-    <string name="settings_eh_hide_hv_events">Hide HV event Notifications</string>
+    <string name="settings_eh_hide_hv_events">Hide HV event notifications</string>
     <string name="settings_read">Read</string>
     <string name="settings_read_screen_rotation">Screen orientation</string>
     <string name="settings_read_screen_rotation_default">Default</string>
@@ -558,7 +558,7 @@
     <string name="settings_about_author">Author</string>
     <string name="settings_about_author_summary" translatable="false">&lt;del&gt;Hippo &amp;lt;ehviewersu$gmail.com&amp;gt;&lt;/del&gt;&lt;br&gt;&lt;del&gt;NekoInverter&lt;/del&gt;&lt;br&gt;小白-白</string>
     <string name="settings_about_telegram" translatable="false">Telegram</string>
-    <string name="settings_about_issues">Issues</string>
+    <string name="settings_about_issues">FAQ</string>
     <string name="settings_about_latest_release">Latest release</string>
     <string name="settings_about_source">Source</string>
     <string name="settings_about_version">Build version</string>
@@ -662,7 +662,7 @@
     <string name="error_please_login_first">Please log in first</string>
     <string name="error_cannot_find_gallery">Couldn\'t find the gallery</string>
     <string name="error_something_wrong_happened">Something wrong happened</string>
-    <string name="kokomade_tip">Settings-&gt;Eh-&gt;Gallery Site-&gt;e-hentai</string>
+    <string name="kokomade_tip">Settings-&gt;Eh-&gt;Gallery Site-&gt;E-Hentai</string>
     <string name="no_browser_installed">Just install a browser please.</string>
     <string name="cloudflare_bypass_failed">Failed to bypass Cloudflare challenge</string>
     <string name="open_in_webview">Open URL in WebView to finish the challenge?</string>
