--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,7 +188,8 @@
 
     <!-- Gallery Detail Scene -->
     <string name="download_upgradeable">Upgradeable</string>
-    <string name="download_existed">The gallery already exists, please delete it and try again</string>
+    <string name="download_upgrade_existed">The gallery already exists, please delete it and try again</string>
+    <string name="download_upgrade_service_failed">Due to system limitations, the download service cannot be started from the background. Please click OK to start.</string>
     <string name="read_from">Read page %d</string>
     <plurals name="page_count">
         <item quantity="one">%d page</item>
@@ -594,7 +595,7 @@
     <string name="app_language_ja" translatable="false">日本語</string>
     <string name="app_language_zh_cn" translatable="false">中文（大陆）</string>
     <string name="app_language_zh_hk" translatable="false">中文（香港）</string>
-    <string name="app_language_zh_tw" translatable="false">國文（臺灣）</string>
+    <string name="app_language_zh_tw" translatable="false">中文（臺灣）</string>
     <!-- Proxy -->
     <string name="proxy_direct">Direct</string>
     <string name="proxy_system">System Proxy</string>
