--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -380,8 +380,13 @@
     <string name="settings_eh_gallery_site">画廊站点</string>
     <string name="settings_eh_image_limits">图片配额</string>
     <string name="settings_eh_image_limits_summary">加载中…</string>
-    <string name="settings_eh_image_limits_summary_2">当前已用：%1$d / %2$d</string>
-    <string name="settings_eh_current_limits">当前已用：%1$s\n重置花费：%2$d GP</string>
+    <string name="settings_eh_image_limits_summary_ip">基于 IP 的限制：</string>
+    <string name="settings_eh_image_limits_summary_ip_ok">未受限</string>
+    <string name="settings_eh_image_limits_summary_ip_restricted">高分辨率图片受限</string>
+    <string name="settings_eh_image_limits_summary_acc">当前已用：%1$d / %2$d</string>
+    <string name="settings_eh_unlock_cost">您可以花费 %1$d GP 来解锁 24 小时高分辨率配额</string>
+    <string name="settings_eh_unlock">解锁</string>
+    <string name="settings_eh_reset_cost">重置花费：%1$d GP</string>
     <string name="settings_eh_reset">重置</string>
     <string name="settings_eh_reset_limits_succeed">成功重置图片配额</string>
     <string name="settings_eh_u_config">E-Hentai 设置</string>
