--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -68,8 +68,10 @@
     <string name="page_menu_share">@string/share</string>
     <string name="page_menu_save">保存</string>
     <string name="page_menu_save_to">保存到…</string>
+    <string name="page_menu_download_original">下载原图</string>
     <string name="gallery_menu_title">菜单</string>
     <string name="share_image">分享图片</string>
+    <string name="start_download_original">开始下载原图，请稍候…</string>
     <string name="image_saved">图片已保存至 %s</string>
 
     <!-- Navigation Bar -->
@@ -243,7 +245,7 @@
     <string name="archive_resample">重采样档案</string>
     <string name="archive_free">免费</string>
     <string name="current_funds">资金：%1$s GP，%2$d Credits</string>
-    <string name="insufficient_funds">余额不足</string>
+    <string name="insufficient_funds">余额不足 (GP)</string>
     <string name="download_archive_started">开始下载压缩包</string>
     <string name="download_archive_failure">无法下载压缩包</string>
     <string name="download_archive_failure_no_hath">下载压缩包需要 H@H 客户端</string>
