--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -68,8 +68,10 @@
     <string name="page_menu_share">@string/share</string>
     <string name="page_menu_save">保存</string>
     <string name="page_menu_save_to">保存到…</string>
+    <string name="page_menu_download_original">下載原圖</string>
     <string name="gallery_menu_title">菜單</string>
     <string name="share_image">分享圖片</string>
+    <string name="start_download_original">開始下載原圖，請稍候…</string>
     <string name="image_saved">圖片已保存至 %s</string>
 
     <!-- Navigation Bar -->
@@ -243,7 +245,7 @@
     <string name="archive_resample">重採樣檔案</string>
     <string name="archive_free">免費</string>
     <string name="current_funds">資金：%1$s GP，%2$d Credits</string>
-    <string name="insufficient_funds">餘額不足</string>
+    <string name="insufficient_funds">餘額不足 (GP)</string>
     <string name="download_archive_started">開始下載壓縮包</string>
     <string name="download_archive_failure">無法下載壓縮包</string>
     <string name="download_archive_failure_no_hath">下載壓縮包需要 H@H 客户端</string>
